--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,9 @@ dependencies:
   cached_network_image: ^3.2.1
   cupertino_icons: ^1.0.2
   flutter_bloc: ^8.1.1
+  flutter_svg: ^2.0.2
   google_nav_bar: ^5.0.6
+  rxdart: ^0.27.7
 
 dev_dependencies:
   flutter_test:
